BrainTest3 Added Setting